# MIOT

./: CMakeLists.txt  dashboard.json  pem2c.py
main/: CMakeLists.txt  main.cpp
